docs/pages/versions/v57.0.0/sdk/ui/swift-ui/gauge.mdx
---
title: Gauge
description: A SwiftUI Gauge component for displaying progress with visual indicators.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Gauge matches the official SwiftUI [Gauge API](https://developer.apple.com/documentation/swiftui/gauge) and supports styling via the [`gaugeStyle`](modifiers/#gaugestylestyle) modifier.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/gauge/ios-light.webp"
  darkSrc="/static/images/expo-ui/gauge/ios-dark.webp"
  alt="Circular capacity Gauge showing 70%"
/>

## Installation

<APIInstallSection />

## Usage

### Basic gauge

<ComponentExample
  title="BasicGaugeExample.tsx"
  src="/static/images/expo-ui/examples/gauge-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/gauge-basic-ios-dark.webp"
  alt="A basic gauge rendered on iOS">

```tsx
import { Host, Gauge } from '@expo/ui/swift-ui';

export default function BasicGaugeExample() {
  // A linear gauge stretches to the width it is given, so give the host a size.
  return (
    <Host style={{ flex: 1 }}>
      <Gauge value={0.5} />
    </Host>
  );
}
```

</ComponentExample>

### With label

You can pass custom components as `children` to provide a label for the gauge.

<ComponentExample
  title="LabelExample.tsx"
  src="/static/images/expo-ui/examples/gauge-label-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/gauge-label-ios-dark.webp"
  alt="A gauge with a Progress label rendered on iOS">

```tsx
import { Host, Gauge, Text } from '@expo/ui/swift-ui';

export default function LabelExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Gauge value={0.7}>
        <Text>Progress</Text>
      </Gauge>
    </Host>
  );
}
```

</ComponentExample>

### With value labels

Use the `currentValueLabel`, `minimumValueLabel`, and `maximumValueLabel` props to display value information.

<ComponentExample
  title="ValueLabelsExample.tsx"
  src="/static/images/expo-ui/examples/gauge-value-labels-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/gauge-value-labels-ios-dark.webp"
  alt="A gauge with current, minimum, and maximum value labels rendered on iOS">

```tsx
import { Host, Gauge, Text } from '@expo/ui/swift-ui';

export default function ValueLabelsExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Gauge
        value={50}
        min={0}
        max={100}
        currentValueLabel={<Text>50%</Text>}
        minimumValueLabel={<Text>0</Text>}
        maximumValueLabel={<Text>100</Text>}>
        <Text>Usage</Text>
      </Gauge>
    </Host>
  );
}
```

</ComponentExample>

### Gauge styles

Use the `gaugeStyle` modifier to change the gauge's appearance. Available styles are: `automatic`, `circular`, `circularCapacity`, `linear`, and `linearCapacity`.

<ComponentExample
  title="GaugeStylesExample.tsx"
  src="/static/images/expo-ui/examples/gauge-styles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/gauge-styles-ios-dark.webp"
  alt="Circular, circular capacity, linear, and linear capacity gauge styles rendered on iOS">

```tsx
import { Host, Gauge, Text, VStack } from '@expo/ui/swift-ui';
import { gaugeStyle } from '@expo/ui/swift-ui/modifiers';

export default function GaugeStylesExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={16}>
        <Text>Circular</Text>
        <Gauge value={0.5} modifiers={[gaugeStyle('circular')]}>
          <Text>Circular</Text>
        </Gauge>
        <Text>Circular Capacity</Text>
        <Gauge
          value={0.5}
          modifiers={[gaugeStyle('circularCapacity')]}>
          <Text>Circular Capacity</Text>
        </Gauge>
        <Text>Linear</Text>
        <Gauge value={0.5} modifiers={[gaugeStyle('linear')]}>
          <Text>Linear</Text>
        </Gauge>
        <Gauge
          value={0.5}
          modifiers={[gaugeStyle('linearCapacity')]}>
          <Text>Linear Capacity</Text>
        </Gauge>
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### Tinted gauge

Use the `tint` modifier to change the gauge's color.

<ComponentExample
  title="TintedGaugeExample.tsx"
  src="/static/images/expo-ui/examples/gauge-tinted-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/gauge-tinted-ios-dark.webp"
  alt="A green circular gauge and a red linear gauge rendered on iOS">

```tsx
import { Host, Gauge, VStack } from '@expo/ui/swift-ui';
import { gaugeStyle, tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedGaugeExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={16}>
        <Gauge
          value={0.7}
          modifiers={[gaugeStyle('circular'), tint('green')]}
        />
        <Gauge
          value={0.3}
          modifiers={[gaugeStyle('linear'), tint('red')]}
        />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Gauge } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/gauge" apiName="Gauge" />
